--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Triangle d'exposition - Apprendre.Photo</title>
+    <style>html, body { margin: 0; padding: 0; overflow: hidden; }</style>
   </head>
   <body>
     <div id="root"></div>
@@ -12,10 +13,11 @@
     <script>
       (function(){
         function sendHeight(){
-          var h = document.documentElement.scrollHeight;
+          var root = document.getElementById('root');
+          var h = root ? root.offsetHeight : document.documentElement.scrollHeight;
           window.parent.postMessage({type:'resize-iframe',height:h},'*');
         }
-        if(window.ResizeObserver){new ResizeObserver(sendHeight).observe(document.body);}
+        if(window.ResizeObserver){new ResizeObserver(sendHeight).observe(document.getElementById('root') || document.body);}
         window.addEventListener('load',sendHeight);
         setInterval(sendHeight,500);
       })();
